--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,7 +1,7 @@
 ## Build stage
 FROM golang:1.17-bullseye as build
 WORKDIR /go/src/app
-ADD ./src/ /go/src/app
+COPY ./src/ /go/src/app
 
 RUN go get -d -v ./...
 RUN go build -o /go/bin/app
