--- a/.github/workflows/pr-dockerfile.yaml
+++ b/.github/workflows/pr-dockerfile.yaml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: hadolint/hadolint-action@1.6.0
+      - uses: hadolint/hadolint-action
         with:
           dockerfile: .docker/Dockerfile
           ignore: DL3006
