--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,8 +3,7 @@ FROM golang:1.17-bullseye as build
 WORKDIR /go/src/app
 COPY ./src/ /go/src/app
 
-RUN go get -d -v ./...
-RUN go build -o /go/bin/app
+RUN go get -d -v ./... && go build -o /go/bin/app
 
 ## Development environment
 FROM golang:1.17-bullseye as development
